--- a/Quadcopter_Project.ipynb
+++ b/Quadcopter_Project.ipynb
@@ -396,7 +396,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode =  368, score = 666.903 (best = 673.171)))"
+      "Episode =  552, score = -169.664 (best = 673.171))"
      ]
     }
    ],
@@ -504,7 +504,7 @@
     "\n",
     "**问题 1**：请描述你在 `task.py` 中指定的任务。你如何设计奖励函数？\n",
     "\n",
-    "**回答**：主要任务是以到达目标位置(0，0，10)为止。当目标z越高，得到的奖励越多。\n",
+    "**回答**：主要任务是设定到达目标位置(0，0，10)。奖励得分与 “沿z轴的方向、接近z轴的方向、达到或超过目标位置、欧拉角的弧度、是否上升”等因素相关。\n",
     "\n",
     "**问题 2**：请简要描述你的智能体，你可以参考以下问题：\n",
     "\n",
@@ -523,7 +523,7 @@
     "- 该学习曲线中是否存在循序渐进或急速上升的部分？\n",
     "- 该智能体的最终性能有多好？（比如最后十个阶段的平均奖励值）\n",
     "\n",
-    "**回答**：该任务比较困难，调参很费时，而且有点无从下手的感觉。\n",
+    "**回答**：该任务比较困难，调参很费时。智能体经过短暂的学习后，由开始的下降逐渐往上上升，并逐渐稳定在一定高度。\n",
     "\n",
     "**问题 4**：请简要总结你的本次项目经历。你可以参考以下问题：\n",
     "\n",
